2005-08-18  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclDictObj.c:	DictIncrCmd rewrite to use TclIncrObj.

	* generic/tclInt.h:	TclIncrObj static -> internal
	* generic/tclExecute.c:

2005-08-17  Kevin Kenny  <kennykb@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclBasic.c (Tcl_Expr{Long,Double}{,Obj}): Updated to
	* generic/tclTest.c:                                deal with
	* tests/expr-old.test:                              bignums (well, 
	* tests/expr.test:                                  mostly).
	Added a missing "errno=0;" in ExprUnaryFunc so that spurious
	error returns aren't detected. 
	Added test cases for Tcl_Expr* and Tcl_Expr*Obj because
	there was very poor test coverage in those areas.
	* generic/tclParseExpr.c: Reworked parsing of numbers to call
	TclParseNumber rather than trying to do things locally.
	* generic/tclStrToD.c: Corrected a comment. Changed so that
	*endPtrPtr does not include any trailing whitespace.
	
2005-08-17  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	New routine TclIncrObj to centralize the
	increment operation needed in many places.  Updated
	INST_DICT_INCR_IMM to make use of it.

2005-08-16  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Made bit shifting opcodes and INST_MOD
	bignum-aware.

	* tests/scan.test:	Making << bignum-aware means that repeated
	* tests/string.test:	left shifting cannot turn a positive into
	a negative.  Revised [int_range] and [largest_int] utility commands
	in the test suite that relied on that happening.  Without revision
	they became infinite loops.

	* generic/tclExecute.c:	Made binary bitwise opcodes bignum-aware.

	* generic/tclTomMath.h:	Added mp_or and mp_xor to routines from
	* unix/Makefile.in:	libtommath used by Tcl.
	* win/Makefile.in:
	* win/makefile.vc:

2005-08-15  Don Porter  <dgp@users.sourceforge.net>
